se agrega diseno responsivo para tablet max-width 768px

--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
       </section>
 
       <div class="rodapie">
-        <p>Desarrollado por Emilio</p>
+        <p>Desarrollado por Emilio Pino <a href="https://github.com/pinoen"></p>
+        <img src="img/4747499_github_icon.png" alt="github"></a>
         <p>2022</p>
       </div>
       
