se agrega login.html y login.css con sus contenido y estilo basicos

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>e-commerce</title>
   </head>
   <body>
@@ -16,7 +16,7 @@
           class="input__header"
           placeholder="¿Qué deseas buscar?"
         />
-        <button class="boton__login">Login</button>
+        <button class="boton__login"><a href="login.html">Login</a></button>
       </div>
 
       <div class="bg__header">
