se agrega diseno responsivo de pagina de login para tablets y mobiles

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           placeholder="¿Qué deseas buscar?"
         />
         <button class="boton__login"><a href="login.html">Login</a></button>
+        <a class="lupa" href="#"><img src="img/lupa.png" alt="lupa"></a>
       </div>
 
       <div class="bg__header">
