--- a/login.html
+++ b/login.html
@@ -16,6 +16,7 @@
         class="input__header"
         placeholder="¿Qué deseas buscar?"
       />
+      <a class="lupa" href="#"><img src="img/lupa.png" alt="lupa"></a>
     </div>
   
     <main>
