se completa diseno responsivo de pagina productos para tablets y mobiles

--- a/productos.html
+++ b/productos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/productos.css">
-    <title>Gestion de Productos/title>
+    <title>Gestion de Productos</title>
   </head>
   <body>
     <header>
@@ -21,137 +21,157 @@
     </header>
 
     <main>
-      <section class="starWars">
+      <section class="producto">
         <div class="title__container">
-          <h3 class="title__starWars">Star Wars</h3>
-          <p class="ver"><a href="#">Ver todo &#8594</a></p>
+          <h3 class="title__producto">Todos los productos</h3>
+          <p class="agregar"><button>Agregar producto<a href="#"></a></button></p>
         </div>
         <div class="imagenes">
-          <div class="box__starWars">
+          <div class="box__producto">
             <img src="img/unsplash_0POwK6iAiRQ.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__starWars">
+          <div class="box__producto">
             <img src="img/unsplash_1VV1MRafd7A.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__starWars">
+          <div class="box__producto">
             <img src="/img/unsplash_4OHkK555s1A.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__starWars">
+          <div class="box__producto">
             <img src="img/unsplash_6FDXGY9J6y4.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__starWars">
+          <div class="box__producto">
             <img src="img/unsplash_bUgaIaZysH0.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__starWars">
+          <div class="box__producto">
             <img src="img/unsplash_caNzzoxls8Q.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-        </div>
-      </section>
 
-      <section class="consolas">
-        <div class="title__container">
-          <h3 class="title__consolas">Consolas</h3>
-          <p class="ver"><a href="#">Ver todo &#8594</a></p>
-        </div>
-        <div class="imagenes">
-          <div class="box__consolas">
+          <div class="box__producto">
             <img src="img/unsplash_epRFE_hBNjo.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__consolas">
+          <div class="box__producto">
             <img src="img/unsplash_fMP-oCze3AY.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__consolas">
+          <div class="box__producto">
             <img src="/img/unsplash_jMT6BrgBuXU.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__consolas">
+          <div class="box__producto">
             <img src="img/unsplash_k-xYhI3-gJM.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__consolas">
+          <div class="box__producto">
             <img src="img/unsplash_KeGToDVN0l4.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__consolas">
+          <div class="box__producto">
             <img src="img/unsplash_MxVkWPiJALs.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-        </div>
-      </section>
 
-      <section class="diversos">
-        <div class="title__container">
-          <h3 class="title__diversos">Diversos</h3>
-          <p class="ver"><a href="#">Ver todo &#8594</a></p>
-        </div>
-        <div class="imagenes">
-          <div class="box__diversos">
+          <div class="box__producto">
             <img src="img/unsplash_r27umXAelDc.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__diversos">
+          <div class="box__producto">
             <img src="img/unsplash_R8L1l9RN198.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__diversos">
+          <div class="box__producto">
             <img src="/img/unsplash_sYVY_ZKwaxU.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__diversos">
+          <div class="box__producto">
             <img src="img/unsplash_wa5z9o9fgjw.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__diversos">
+          <div class="box__producto">
             <img src="img/unsplash_Zjn4dT993-g.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
-          <div class="box__diversos">
+          <div class="box__producto">
             <img src="img/unsplash_ZV7lnfyQLmA.png" alt="" class="foto" />
+            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
+            <img src="img/edit.png" alt="editar producto" class="editar">
             <p class="description">Producto XYZ</p>
             <p class="precio">$ 60,00</p>
-            <p class="ver"><a href="#">Ver producto</a></p>
+            <p class="ver">#1111111</p>
           </div>
         </div>
       </section>
