--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="bg__header">
         <h1 class="title__header">Febrero Promocional</h1>
         <p class="p__header">Productos seleccionados con 33% de descuento</p>
-        <button class="boton__consolas">Ver Consolas</button>
+        <button class="boton__consolas"><a href="#consolas">Ver Consolas</a></button>
       </div>
     </header>
 
@@ -73,7 +73,7 @@
         </div>
       </section>
 
-      <section class="consolas">
+      <section class="consolas" id="consolas">
         <div class="title__container">
           <h3 class="title__consolas">Consolas</h3>
           <p class="ver"><a href="#">Ver todo &#8594</a></p>
@@ -178,8 +178,11 @@
         <div class="formulario">
           <p class="form">Hable con nosotros</p>
           <form action="">
-            <input type="text" placeholder="Nombre">
-            <textarea name="" id="" placeholder="Escribe tu mensaje"></textarea>
+            <input type="text" name="nombre" id="nombre" placeholder="Nombre">
+            <span class="error" id="errorEmail"></span>
+            <textarea name="mensaje" id="mensaje" placeholder="Escribe tu mensaje"></textarea>
+            <span class="error" id="errorMensaje"></span>
+
             <button type="submit" class="boton__contacto">Enviar mensaje</button>
           </form>
         </div>
@@ -192,5 +195,6 @@
       </div>
       
     </footer>
+    <script src="js/contacto.js"></script>
   </body>
 </html>
