se agrega validacion de formulario de contacto en contacto.js

--- a/index.html
+++ b/index.html
@@ -179,11 +179,13 @@
           <p class="form">Hable con nosotros</p>
           <form action="">
             <input type="text" name="nombre" id="nombre" placeholder="Nombre">
-            <span class="error" id="errorEmail"></span>
+            <span class="error" id="errorNombre"></span>
+            
             <textarea name="mensaje" id="mensaje" placeholder="Escribe tu mensaje"></textarea>
             <span class="error" id="errorMensaje"></span>
 
             <button type="submit" class="boton__contacto">Enviar mensaje</button>
+            <span id="enviado"></span>
           </form>
         </div>
       </section>
