se crea productos.json como base de datos de productos disponibes

--- a/productos.html
+++ b/productos.html
@@ -24,7 +24,7 @@
       <section class="producto">
         <div class="title__container">
           <h3 class="title__producto">Todos los productos</h3>
-          <p class="agregar"><button>Agregar producto<a href="#"></a></button></p>
+          <p class="agregar"><button><a href="agregar.html">Agregar producto</a></button></p>
         </div>
         <div class="imagenes">
           <div class="box__producto">
