--- a/productos.html
+++ b/productos.html
@@ -27,152 +27,7 @@
           <p class="agregar"><button><a href="agregar.html">Agregar producto</a></button></p>
         </div>
         <div class="imagenes">
-          <div class="box__producto">
-            <img src="img/unsplash_0POwK6iAiRQ.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="img/unsplash_1VV1MRafd7A.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="/img/unsplash_4OHkK555s1A.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="img/unsplash_6FDXGY9J6y4.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="img/unsplash_bUgaIaZysH0.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="img/unsplash_caNzzoxls8Q.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-
-          <div class="box__producto">
-            <img src="img/unsplash_epRFE_hBNjo.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="img/unsplash_fMP-oCze3AY.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="/img/unsplash_jMT6BrgBuXU.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="img/unsplash_k-xYhI3-gJM.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="img/unsplash_KeGToDVN0l4.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="img/unsplash_MxVkWPiJALs.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-
-          <div class="box__producto">
-            <img src="img/unsplash_r27umXAelDc.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="img/unsplash_R8L1l9RN198.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="/img/unsplash_sYVY_ZKwaxU.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="img/unsplash_wa5z9o9fgjw.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="img/unsplash_Zjn4dT993-g.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
-          <div class="box__producto">
-            <img src="img/unsplash_ZV7lnfyQLmA.png" alt="" class="foto" />
-            <img class="eliminar" src="img/delete.png" alt="eliminar producto">
-            <img src="img/edit.png" alt="editar producto" class="editar">
-            <p class="description">Producto XYZ</p>
-            <p class="precio">$ 60,00</p>
-            <p class="ver">#1111111</p>
-          </div>
+          
         </div>
       </section>
     </main>
@@ -205,5 +60,6 @@
       </div>
       
     </footer>
+  <script src="js/productos.js"></script>  
   </body>
 </html>
