--- a/productos.html
+++ b/productos.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="buscador__header">
-        <img src="img/Logo.png" alt="logo" class="logo__header" />
+        <a href="index.html"><img src="img/Logo.png" alt="logo" class="logo__header" /></a>
         <input
           type="text"
           class="input__header"
