--- a/ver.html
+++ b/ver.html
@@ -58,7 +58,7 @@
 
     <footer>
       <section class="contacto">
-        <img src="img/Logo.png" alt="logo" class="logo__contacto">
+        <a href="index.html"><img src="img/Logo.png" alt="logo" class="logo__contacto"></a>
         <ul class="links">
           <li><a href="#">Quienes somos</a></li>
           <li><a href="#">Politica de privacidad</a></li>
