--- a/agregar.html
+++ b/agregar.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/agregar.css">
-  <title>Login</title>
+  <title>Agregar producto</title>
 </head>
 <body>
   <header>
     <div class="buscador__header">
-      <img src="img/Logo.png" alt="logo" class="logo__header" />
+      <a href="index.html"><img src="img/Logo.png" alt="logo" class="logo__header" /></a>
       <input
         type="text"
         class="input__header"
@@ -36,7 +36,7 @@
 
   <footer>
     <section class="contacto">
-      <img src="img/Logo.png" alt="logo" class="logo__contacto">
+      <a href="index.html"><img src="img/Logo.png" alt="logo" class="logo__contacto"></a>
       <ul class="links">
         <li><a href="#">Quienes somos</a></li>
         <li><a href="#">Politica de privacidad</a></li>
@@ -48,9 +48,14 @@
       <div class="formulario">
         <p class="form">Hable con nosotros</p>
         <form action="">
-          <input type="text" placeholder="Nombre">
-          <textarea name="" id="" placeholder="Escribe tu mensaje"></textarea>
-          <button type="submit" class="boton__contacto">Enviar mensaje</button>
+          <input type="text" name="nombre" id="nombre" placeholder="Nombre">
+            <span class="error" id="errorNombre"></span>
+            
+            <textarea name="mensaje" id="mensaje" placeholder="Escribe tu mensaje"></textarea>
+            <span class="error" id="errorMensaje"></span>
+
+            <button type="submit" class="boton__contacto">Enviar mensaje</button>
+            <span id="enviado"></span>
         </form>
       </div>
     </section>
@@ -63,5 +68,6 @@
     
   </footer>
 <script src="js/agregar.js"></script>
+<script src="js/contacto.js"></script>
 </body>
 </html>
