--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="buscador__header">
-      <img src="img/Logo.png" alt="logo" class="logo__header" />
+      <a href="index.html"><img src="img/Logo.png" alt="logo" class="logo__header" /></a>
       <input
         type="text"
         class="input__header"
@@ -35,7 +35,7 @@
 
   <footer>
     <section class="contacto">
-      <img src="img/Logo.png" alt="logo" class="logo__contacto">
+      <a href="index.html"><img src="img/Logo.png" alt="logo" class="logo__contacto"></a>
       <ul class="links">
         <li><a href="#">Quienes somos</a></li>
         <li><a href="#">Politica de privacidad</a></li>
