se agrega funcionalidad a barra de buscar productos

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
           placeholder="¿Qué deseas buscar?"
         />
         <button class="boton__login"><a href="login.html">Login</a></button>
-        <a class="lupa" href="#"><img src="img/lupa.png" alt="lupa"></a>
+        <a class="lupa" id="lupa" href="#"><img src="img/lupa.png" alt="lupa"></a>
       </div>
 
       <div class="bg__header">
@@ -27,7 +27,19 @@
       </div>
     </header>
 
+    
+
     <main>
+      <section class="busqueda" id="busqueda">
+        <div class="title__container">
+          <h3 class="title__busqueda">Resultado de la busqueda</h3>
+        </div>
+        <div class="imagenes__busqueda">
+          
+        </div>
+        <button class="boton__busqueda"><a href="#lupa">Nueva busqueda</a></button>
+      </section>
+
       <section class="starWars">
         <div class="title__container">
           <h3 class="title__starWars">Star Wars</h3>
