--- a/public/ver.html
+++ b/public/ver.html
@@ -28,6 +28,16 @@
     </header>
 
     <main>
+      <section class="busqueda" id="busqueda">
+        <div class="title__container">
+          <h3 class="title__busqueda">Resultado de la busqueda</h3>
+        </div>
+        <div class="imagenes__busqueda">
+          
+        </div>
+        <button class="boton__busqueda"><a href="#lupa">Nueva busqueda</a></button>
+      </section>
+
       <section class="starWars" id="starWars">
         <div class="title__container">
           <h3 class="title__starWars">Productos categoria Star Wars disponibles:</h3>
